Fix snapshots and plotting.
- add water case

--- a/EM_models/small_scale/water/main.in
+++ b/EM_models/small_scale/water/main.in
@@ -32,7 +32,8 @@ center = domain_size / 2
 
 ## Soil box
 lower_corner = np.array([0, 0, 0])
-box(*lower_corner, *domain_size, 'free_space')
+material(80, 0, 1, 0, 'water')
+box(*lower_corner, *domain_size, 'water')
 
 ## Main cylinder (gap between electrodes and soil)
 main_diameter = outer_diameter + outer_gap
