--- a/configs/config_0.yaml
+++ b/configs/config_0.yaml
@@ -1,41 +1,86 @@
 seed: 12345
 model_config:
   params:
-    names: 
-      - "Geom.domain.RelPerm.Alpha"
-      - "Geom.domain.Saturation.Alpha"
+    names:
+      ##- "Geom.domain.RelPerm.Alpha"
+      ##- "Geom.domain.Saturation.Alpha"
       - "Geom.domain.RelPerm.N"
-      - "Geom.domain.Saturation.N"
+      ##- "Geom.domain.Saturation.N"
       - "Geom.domain.Saturation.SRes"
       - "Geom.domain.Saturation.SSat"
-      - "Patch.top.BCPressure.alltime.Value"
+      #- "Patch.top.BCPressure.alltime.Value"
+      - "Geom.domain.Perm.Value"
     values: 
-      - 0.58
-      - 0.58
-      - 3.7
+      ##- 0.58
+      ##- 0.58
+      ##- 3.7
       - 3.7
       - 0.06
       - 0.47
-      - -0.02
+      ##- -0.02
+      - 0.012833 #0.012833 #0.012833  # [m/hr]
     std: 
+    #  - 0.001
+    #  - 0.0001
+    #  - 0.03
+    #  - 0.003
+    #  - 0.0001
+    #  - 0.0004
+    #  - 0.0001
+    #std: 
+      ##- 0.001
+      #- 0.01
+      ##- 0.03
+      - 0.1
       - 0.001
-      - 0.0001
-      - 0.03
-      - 0.003
-      - 0.0001
-      - 0.0004
-      - 0.0001
-      
+      - 0.01
+      ##- 0.001
+      - 0.001
+  rain_periods: 
+    #- [28, -0.2]    # hours of rain with precipitation
+    - [96, 0]    
+    #- [24, -0.02]
+    #- [4, -0.02] 
+  #flux_eps: [0, 0]
+    
+  #rain_periods: 
+  #  - [8, -0.02]    # hours of rain with precipitation
+  #  - [4, 0]    
+  #  - [8, -0.02] 
+  evapotranspiration_params:
+    names:
+      - "n"
+      - "T"
+      - "u2"
+      - "Tmax"
+      - "Tmin"
+      - "RHmax"
+      - "RHmin"
+      - "month"
+    values:
+      - 14
+      - 20
+      - 10
+      - 27
+      - 12
+      - 0.55
+      - 0.35
+      - 6
 kalman_config:
-  measurements_data_name: saturation  # Possible values: "saturation" or "pressure"
+  measurements_data_name: "saturation"  # Possible values: "saturation" or "pressure"
   mes_locations_train: 
     - 0.5
     - 1.5
+    #- 2.5
+    #- 3.5
   mes_locations_test: 
     - 1
     - 2
   measurements_noise_level: 0.1
-  noise_distr_type: gaussian
+  noise_distr_type: uniform #gaussian
+  model_params_noise_level: 0.1
   pressure_saturation_data_noise_level: 0.1
   pressure_saturation_data_std: 3.2
+  Q_var: 0.00005
+  Q_model_params_var: 0.00000001
 
