Minor modifications to make ParFlow model work
- use pathlib in kalman.py
- possibility to set location of parflow in configuration (PyCharm
ignores .bashrc)
- removed chdir from KalmanFilter constructor

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 **/.idea
+surface_model/parflow_reference/parflow
+soil_model/workdir
+projekt
+notebooks/*.pdf
+notebooks/202*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
