Working Kalman example

--- a/surface_model/requirements.txt
+++ b/surface_model/requirements.txt
@@ -7,12 +7,12 @@ pandas
 filterpy
 seaborn
 pftools[all]
-
-#joblib
-#seaborn
-#scikit-learn
+joblib
 matplotlib
 plotly
+
+#seaborn
+#scikit-learn
 #ipykernel
 #reportlab
 #weasyprint
