--- a/soil_model/configs/config_0_experiments.yaml
+++ b/soil_model/configs/config_0_experiments.yaml
@@ -1,29 +1,28 @@
 seed: 123456
 model_config:
   model_class_name: "ToyProblem"
-  PARFLOW_DIR: "../../../surface_model/parflow_reference/parflow"  
+  init_pressure: [-0.1, -4]    # bottom, top ; [temporary solution]
+  static_params:
+    ComputationalGrid:
+      "Lower.Z": -4
+      "DZ": 0.2
+      "NZ": 20  #, 0] # Number of grid cells in z-direction
   params:
-      "ComputationalGrid.Lower.X": [0.0, 0]
-      "ComputationalGrid.Lower.Y": [0.0, 0]
-      "ComputationalGrid.Lower.Z": [-10, 0]
-      "ComputationalGrid.DX": [1, 0]
-      "ComputationalGrid.DY": [1, 0]
-      "ComputationalGrid.DZ": [0.5, 0]
-      "ComputationalGrid.NX": [1, 0] # Number of grid cells in x-direction
-      "ComputationalGrid.NY": [1, 0] # Number of grid cells in y-direction
-      "ComputationalGrid.NZ": [20, 0] # Number of grid cells in z-direction
-      "Geom.domain.Lower.X": [0.0, 0]
-      "Geom.domain.Lower.Y": [0.0, 0]
-      "Geom.domain.Lower.Z": [-10, 0]
-      "Geom.domain.Upper.X": [1, 0]
-      "Geom.domain.Upper.Y": [1, 0]
-      "Geom.domain.Upper.Z": [0.0, 0]
-      "Geom.domain.Perm.Value": [0.012833, 0.001]
-      "Geom.domain.Saturation.N": [3.7, 0.1]
+      vG_K_s: "Geom.domain.Perm.Value"
+      vG_n:  ["Geom.domain.Saturation.N", "Geom.domain.RelPerm.N"]
+      vG_Th_s: "Geom.domain.Saturation.SSat"
+      vG_Th_r: "Geom.domain.Saturation.SRes"
+      vG_alpha: ["Geom.domain.Saturation.Alpha", "Geom.domain.RelPerm.Alpha"]
+  #    "Geom.domain":
+  #      :
+  #      "Saturation.N": [3.7, 0.1]
   rain_periods: 
-    - [28, -0.02]    # hours of rain with precipitation
-    - [16, 0]    
-    - [24, -0.02]
+    - [10, -0.002]    # hours of rain with precipitation
+    - [10, -0.2]    # hours of rain with precipitation
+
+    # - [28, -0.02]    # hours of rain with precipitation
+    #- [16, 0]
+    #- [24, -0.02]
     # - [4, -0.02] 
     
   #rain_periods: 
@@ -50,22 +49,56 @@ model_config:
       - 0.35
       - 6
 kalman_config:
+  state_params:
+      pressure_field:
+        mean_linear:
+          top: -0.5
+          bottom: -2  # top, bottom
+        cov_exponential:
+          std: 2.0
+        Q: 0.00005
+        # ref: TODO: make ref accept mean clases
+        # correlation_length: 0.5
+      vG_K_s:
+        ref: 11
+        #mean_std: [12.833, 0.01]
+        mean_std: [11, 0.001 ]
+        Q: 0.00000001
+        #transform: lognormal            # transform to normal distribution
+        #conf_interval: [0.0001, 0.01]   # implicit 0.95 confidence interval
+      vG_n:
+        ref: 3.7
+        mean_std: [3.7, 0.01]
+        Q: 0.00000001
+        #transform: lognormal            # transform to normal distribution
+        #conf_interval: [0.0001, 0.01]   # implicit 0.95 confidence interval
+
+      #Th_s:
+        # transform: none
+        #
+      #  conf_interval: [0.35, 0.41, 0.9]  # explicit 0.9 confidence interval
+
+
+
   measurements_data_name: "saturation"  # Possible values: "saturation" or "pressure"
   mes_locations_train: 
     - 0.5
-    - 1.5
+    - 1.4
     #- 2.5
     #- 3.5
   mes_locations_test: 
-    - 1
-    - 2
+    - 0.2
+    - 0.8
+    - 1.6
+    - 3.0
   measurements_noise_level: 0.05
   noise_distr_type: uniform #gaussian
-  model_params_noise_level: 0.1
-  pressure_saturation_data_noise_level: 0.1
-  pressure_saturation_data_std: 3.2
+  # model_params_noise_level: 0.1
+  pressure_saturation_data_noise_level: 0.3   # init state noise
+  #pressure_saturation_data_std: 3.2
   Q_var: 0.00005
   Q_model_params_var: 0.00000001
   sigma_points_params: {"alpha": 0.01, "beta": 2, "kappa": 1}
-  plot: True
+postprocess:
+  show: True
 
